# traders

./: .env  .gitignore  Cargo.toml  Dockerfile  README  README.md  curl_examples.md  package-lock.json  package.json  sqlx-data.json  systemd.service.example  traders-watch.sh
.github/workflows/: deploy.yml
assets/scss/: _variables.scss  buttons.scss  faq.scss  forms.scss  homepage.scss  journal_entries.scss  main.scss  mini_calendar.scss  mini_day.scss  mouse_notification.scss  navigation.scss  normalize.scss  table.scss  trades.scss
configuration/: base.yaml
db/migrations/: 20230105165740_create_user.sql  20230105165801_create_trade.sql
migrations/: 20230301004123_create_users_table.sql  20230310000927_create_trades_table.sql  20230315224433_seed_user.sql  20230325151951_create_accounts_table.sql  20230325152019_create_trades_table.sql  20230325152030_create_executions_table.sql  20230410032004_create_tags_table.sql  20230410043638_create_journal_entries_table.sql  20230410050407_create_trades_tags_table.sql  20230806150930_create_instruments_table.sql  20230806153010_create_roles_table.sql  20230806161559_create_users_table.sql  20230806163759_create_accounts_table.sql  20230806163826_create_trades_table.sql  20230806173748_create_executions_table.sql  20230806174058_create_trades_tags_table.sql  20230806174115_create_journal_entries_table.sql  20230812050817_create_journal_entry_images_table.sql  20230826151100_seed_user_and_trades.sql  20240316015626_create_trade_processing_statuses_table.sql  20240316032328_create_trade_processing_status_messages_table.sql  20240316054002_rename_trade_processing_statuses_id.sql  20240316133629_add_finished_processing_to_trade_processing_status.sql  20240316141816_change_trade_processing_status_type.sql  20240320004540_add_is_pa_to_accounts_table.sql  20240406155044_add_is_active_to_accounts_table.sql  20240409234100_add_entry_date_to_journal_entries_table.sql  20240415230448_add_unique_user_entry_date.sql
scripts/: init_db.sh  start.sh
src/: authentication.rs  configuration.rs  errors.rs  excel_helpers.rs  health_check.rs  instrument_prices.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  template_helpers.rs  trade.rs  user.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/db/models/: accounts.rs  executions.rs  instruments.rs  journal_entries.rs  mod.rs  trade_processing_status_messages.rs  trade_processing_statuses.rs  trades.rs  user.rs  users.rs
src/domain/: new_user.rs  user_email.rs  user_name.rs
src/errors/: account_errors.rs  execution_errors.rs  general_errors.rs  mod.rs  processing_errors.rs  trade_errors.rs  user_errors.rs
src/routes/: account.rs  account_routes.rs  calendar_routes.rs  execution_routes.rs  faq_routes.rs  health_check.rs  homepage.rs  journal_entry.rs  journal_entry_routes.rs  login.rs  mod.rs  trade.rs  trade_routes.rs  trades.rs  user.rs  users.rs
src/routes/api/: accounts.rs  execution_routes.rs  executions.rs  health_check.rs  journal_entries.rs  mod.rs  trades.rs  users.rs
src/routes/calendar/: mod.rs
src/routes/journal_entries/: mod.rs
src/routes/users/: mod.rs
src/services/: mod.rs  trade_processor.rs
static/css/: main.css  main.css.map
static/js/: utils.js
static/templates/: 500.html  base.html  index.html  login.html
static/templates/accounts/: index.html
static/templates/calendar/: index.html
static/templates/executions/: index.html
static/templates/faq/: index.html
static/templates/homepage/: index.html
static/templates/journal_entries/: index.html
static/templates/journal_entries/partials/: _account_overview.html
static/templates/mini_calendar/: _mini_week.html  mini_calendar.html  mini_week.html
static/templates/partials/: _account_pnl_chart.html  _mini_calendar.html  _navigation.html  _top_nav.html
static/templates/trades/: index.html
static/templates/users/: new.html
tests/: health_check.rs  users.rs
tests/api/: executions.rs  health_check.rs  helpers.rs  login.rs  main.rs  trades.rs  users.rs
tests/db/: users_tests.rs
