[package]
name = "traders"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "traders"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4"
actix-session = {version="0.7.2", features = ["redis-actor-session"]}
chrono = {version="0.4.23", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = {version = "1.2.2", features = ["v4","fast-rng","macro-diagnostics","serde"]}
dotenv = "0.15.0"
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "macros", "postgres", "chrono", "uuid", "migrate"] }
time = {version="0.3.17", features=["serde"]}
config = "0.13.3"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
once_cell = "1.17.1"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.2"
actix-cors = "0.6.4"

[dev-dependencies]
reqwest = "0.11.14"
